# caloud

./: Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: args.rs  claude.rs  input_rewrite.rs  macos.rs  main.rs  notification.rs  runtime.rs  tty_text.rs
src/input_rewrite/: escape.rs  rewriter.rs  rule.rs  zwsp_inserter.rs
src/macos/: application.rs  notification.rs  say.rs  sys_proc_info.h  sys_proc_info.rs
src/tty_text/: buffer.rs  fragment.rs  line_wrapping.rs  reformat.rs
src/tty_text/reformat/: line_wrapping.rs
src/tty_text/reformat/snapshots/: AGENTS.md  bare.capture.raw  bare.md  bare.snap  bare.snap.raw  capture.exp  codespan.capture.raw  codespan.md  codespan.snap  codespan.snap.raw  inline.capture.raw  inline.md  inline.snap  inline.snap.raw  ordered.capture.raw  ordered.md  ordered.snap  ordered.snap.raw  unordered.capture.raw  unordered.md  unordered.snap  unordered.snap.raw
