[package]
name = "caloud"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
lexopt = "0.3"
nix = { version = "0.30", default-features = false, features = ["ioctl", "poll", "process", "signal", "term"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSUserNotification"] }
shell-words = "1"
unicode-width = "0.2"

[dev-dependencies]
indoc = "2"
insta = { version = "1.46", features = ["glob"] }
proptest = { version = "1.9", features = ["attr-macro"] }
regex = { version = "1", default-features = false, features = ["std"] }

[build-dependencies]
bindgen = "0.72"

[profile.release]
lto = true
